2018-12-06  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Replace [string match] commands involving literal
	strings and variables known to not be Tcl glob patterns with eq
	and ne.
	* config/unix.exp: Likewise.
	* lib/debugger.exp: Likewise.
	* lib/dg.exp: Likewise.
	* lib/framework.exp: Likewise.
	* lib/remote.exp: Likewise.
	* lib/utils.exp: Likewise.
	* baseboards/androideabi.exp: Likewise.
	* baseboards/multi-sim.exp: Likewise.
	* testsuite/lib/util-defs.exp: Likewise.
	* testsuite/runtest.all/config.test: Likewise.

2018-12-06  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.all/utils.test: Add Tcl mode marker for Emacs.
	* testsuite/runtest.all/target.test: Likewise.
	* testsuite/runtest.all/remote.test: Likewise.
	* testsuite/runtest.all/config.test: Likewise.
	* testsuite/runtest.all/clone_output.test: Likewise.

2018-12-06  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Replace '==' with 'eq' for string compares.
	Likewise, replace '!=' with 'ne'. Replace a few instances of
	[string length $str] == 0 with $str eq "".
	* config/gdb-comm.exp: Likewise.
	* lib/dg.exp: Likewise.
	* lib/framework.exp: Likewise.
	* lib/libgloss.exp: Likewise.
	* lib/remote.exp: Likewise.
	* lib/target.exp: Likewise.
	* lib/utils.exp: Likewise.

2018-12-06  Jacob Bachmeyer  <jcb62281@gmail.com>

	* runtest.exp: Replace archaic use of [string match] with "eq".

2018-12-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (compile Procedure): Remove old node.
	(archive Procedure): Likewise.
	(ranlib Procedure): Likewise.

2018-12-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (rsh procedure): Fix node connectivity.

2018-12-06  Ben Elliston  <bje@gnu.org>

	* lib/telnet.exp (telnet_open): Remove connectmode global.
	* doc/dejagnu.texi (Procedures For Remote Communication): Remove
	mention of connectmode.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (execute_anywhere Procedure): Remove obsolete
	node.

2018-12-05  Ben Elliston  <bje@gnu.org>
