@@ -352,7 +352,7 @@ proc diff { file_1 file_2 } {
 	set line_a [lindex ${list_a} ${i}]
 	set line_b [lindex ${list_b} ${i}]
 
-	if {$line_a eq $line_b} {
+	if {$line_a ne $line_b} {
 	    verbose -log "line #${i}" 2
 	    verbose -log "\< ${line_a}" 2
 	    verbose -log "\> ${line_b}" 2
