@@ -53,7 +53,7 @@ if [isbuild hppa-ibm-macos ] {
 }
 
 # test default argument for isbuild
-if {[isbuild] eq $build_triplet} {
+if {[isbuild] ne $build_triplet} {
    puts "FAILED: isbuild with no arguments"
 } else {
    puts "PASSED: isbuild with no arguments"
@@ -79,7 +79,7 @@ if [ishost hppa-ibm-macos] {
 }
 
 # test default argument for ishost
-if {[ishost] eq $host_triplet} {
+if {[ishost] ne $host_triplet} {
    puts "FAILED: ishost with no arguments"
 } else {
    puts "PASSED: ishost with no arguments"
@@ -105,7 +105,7 @@ if [istarget hppa-ibm-macos] {
 }
 
 # test default argument for istarget
-if {[istarget] eq $target_triplet} {
+if {[istarget] ne $target_triplet} {
    puts "FAILED: istarget with no arguments"
 } else {
    puts "PASSED: istarget with no arguments"
