@@ -1,3 +1,11 @@
+2018-12-06  Jacob Bachmeyer  <jcb62281@gmail.com>
+
+	* lib/remote.exp (standard_load): Fix typo on empty string.
+	* runtest.exp: Adjust expression to follow GNU conventions.
+	* lib/utils.exp (diff): Fix mistake in replacing [string compare]
+	with "eq" instead of "ne".
+	* testsuite/runtest.all/config.test: Likewise.
+
 2018-12-06  Ben Elliston  <bje@gnu.org>
 
 	* runtest.exp: Replace [string match] commands involving literal
